Adding id and content description for replay (refresh) button

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">BinarAndroidChapter4Challenge</string>
     <string name="replay_button_description">Replay button</string>
 </resources>
